# myproject

./: README.md  celerybeat-schedule  db.sqlite3  manage.py  pyproject.toml
account/: admin.py  forms.py  models.py  tasks.py  tokens.py  views.py
account/migrations/: 0001_initial.py
blog/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
blog/migrations/: 0001_initial.py
mymainproj/: celery.py  settings.py  urls.py  views.py  wsgi.py
templates/: index.html
templates/account/: acc_active_email.html  activate_email.html  login.html  register.html
templates/blog/: create_post.html  post_detail.html  posts.html
