[tool.poetry]
name = "poetry-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
celery =  "^4.3.0"
Django = "2.2.7"
django-ckeditor = "^5.8.0"
django-sendgrid = "^1.0.1"
redis = "^3.3.11"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
